crates/vite_task_bin/tests/e2e_snapshots/fixtures/inputs-negative-glob-subpackage/snapshots/dotdot auto negative - miss on non-excluded sibling inferred file.snap
---
source: crates/vite_task_bin/tests/e2e_snapshots/main.rs
expression: e2e_outputs
---
> vp run sub-pkg#dotdot-auto-negative
~/packages/sub-pkg$ print-file ../shared/src/utils.ts ../shared/dist/output.js
export const shared = 'initial';
// initial output
> replace-file-content packages/shared/src/utils.ts initial modified

> vp run sub-pkg#dotdot-auto-negative
~/packages/sub-pkg$ print-file ../shared/src/utils.ts ../shared/dist/output.js ✗ cache miss: content of input 'packages/sub-pkg/../shared/src/utils.ts' changed, executing
export const shared = 'modified';
// initial output
