crates/vite_task_bin/tests/e2e_snapshots/fixtures/inputs-negative-glob-subpackage/snapshots/dotdot positive negative.snap
---
source: crates/vite_task_bin/tests/e2e_snapshots/main.rs
expression: e2e_outputs
---
> vp run sub-pkg#dotdot-positive-negative
~/packages/sub-pkg$ print-file ../shared/src/utils.ts ../shared/dist/output.js
export const shared = 'initial';
// initial output
> replace-file-content packages/shared/dist/output.js initial modified

> vp run sub-pkg#dotdot-positive-negative
~/packages/sub-pkg$ print-file ../shared/src/utils.ts ../shared/dist/output.js ✓ cache hit, replaying
export const shared = 'initial';
// initial output

---
[vp run] cache hit, <duration> saved.
> replace-file-content packages/shared/src/utils.ts initial modified

> vp run sub-pkg#dotdot-positive-negative
~/packages/sub-pkg$ print-file ../shared/src/utils.ts ../shared/dist/output.js ✗ cache miss: 'packages/shared/src/utils.ts' modified, executing
export const shared = 'modified';
// modified output
