crates/vite_task_bin/tests/e2e_snapshots/fixtures/inputs-negative-glob-subpackage/snapshots/subpackage auto with negative - hit on excluded inferred file.snap
---
source: crates/vite_task_bin/tests/e2e_snapshots/main.rs
expression: e2e_outputs
---
> vp run sub-pkg#auto-with-negative
~/packages/sub-pkg$ print-file src/main.ts dist/output.js
export const main = 'initial';
// initial output
> replace-file-content packages/sub-pkg/dist/output.js initial modified

> vp run sub-pkg#auto-with-negative
~/packages/sub-pkg$ print-file src/main.ts dist/output.js ✓ cache hit, replaying
export const main = 'initial';
// initial output

---
[vp run] cache hit, <duration> saved.
